--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -32,9 +32,10 @@ Table of contents
 ====================================== */
 @import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato,wght@200;300;400;500;600;700;800;900&display=swap");
 :root {
   --alt-font: "Plus Jakarta Sans", sans-serif;
-  --primary-font: "Inter", sans-serif;
+  --primary-font: "Lato", sans-serif;
 }
 /* ===================================
     02. CSS color variable
